Added uncommitted features from the previous course, added Aspects, added tests, added monitoring and performance